# dotsync

./: .env.dev  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
schemas/: app_settings.schema.json  sync_config.schema.json  user_config.schema.json
src/dotsync/: __main__.py  constants.py
src/dotsync/cli/: app.py  config.py  settings.py  sync.py  utils.py
src/dotsync/mixins/: has_secrets_model.py
src/dotsync/models/: app_settings.py  app_state.py  sync_result.py
src/dotsync/models/app_settings/: app_settings.py  user_config_source.py
src/dotsync/models/sync_config/: base_sync_config.py  single_sync_config.py  sync_config.py
src/dotsync/models/user_config/: base_user_config.py  single_user_config.py  user_config.py
src/dotsync/models/user_config_source/: base_user_config_source.py  file_config_source.py  git_config_source.py  user_config_source.py
src/dotsync/utils/: load_app_dotenv.py  load_file.py  options.py  setup_logs.py
src/dotsync_scripts/: export_schemas.py
